
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;
typedef int uint32_t ;
typedef scalar_t__ kern_return_t ;
typedef scalar_t__ io_service_t ;
typedef int io_connect_t ;


 scalar_t__ IOConnectCallMethod (int ,int,int*,int,char*,size_t,int*,int *,char*,size_t*) ;
 scalar_t__ IOServiceGetMatchingService (int ,int ) ;
 int IOServiceMatching (char*) ;
 scalar_t__ IOServiceOpen (scalar_t__,int ,int ,int *) ;
 scalar_t__ IO_OBJECT_NULL ;
 scalar_t__ KERN_SUCCESS ;
 int MACH_PORT_NULL ;
 int kIOMasterPortDefault ;
 int mach_task_self () ;
 int printf (char*) ;

int main(int argc, char** argv){
  kern_return_t err;

  io_service_t service = IOServiceGetMatchingService(kIOMasterPortDefault, IOServiceMatching("IntelFBClientControl"));

  if (service == IO_OBJECT_NULL){
    printf("unable to find service\n");
    return 0;
  }

  io_connect_t conn = MACH_PORT_NULL;
  err = IOServiceOpen(service, mach_task_self(), 0, &conn);
  if (err != KERN_SUCCESS){
    printf("unable to get user client connection\n");
    return 0;
  }

  uint64_t inputScalar[16];
  uint64_t inputScalarCnt = 0;

  char inputStruct[4096];
  size_t inputStructCnt = 8;

  *(uint64_t*)inputStruct = 0x37;


  uint64_t outputScalar[16];
  uint32_t outputScalarCnt = 0;

  char outputStruct[4096];
  size_t outputStructCnt = 4096;

  err = IOConnectCallMethod(
    conn,
    0x921,
    inputScalar,
    inputScalarCnt,
    inputStruct,
    inputStructCnt,
    outputScalar,
    &outputScalarCnt,
    outputStruct,
    &outputStructCnt);

  return 0;
}
